Fixed missing contributors title and avatar-list unwanted gap if no description

--- a/src/app/components/milestone/milestone.component.scss
+++ b/src/app/components/milestone/milestone.component.scss
@@ -69,7 +69,8 @@
 			gap: 0.5rem;
 		}
 
-		.media {
+		.media,
+		.contributors {
 			display: flex;
 			flex-direction: column;
 			gap: 0.5rem;
@@ -78,7 +79,9 @@
 				font-size: 0.75rem;
 				font-weight: 700;
 			}
+		}
 
+		.media {
 			.image {
 				width: 250px;
 				height: 150px;
